Make Environment backing maps thread-safe
Environment's store (HashMap) and keyMap (HashMap) are not thread-safe.
While the ReentrantLock protects most access, there are code paths where
Environment is accessed without the lock held — for example, handleHttp
handlers that read env before calling setStatus(RUNNING), and the
NonBlocking federation workaround that bypasses locking entirely.

Replace both maps with ConcurrentHashMap so that individual map
operations (get, put, remove, containsKey) are atomic and visible across
threads. This is a defense-in-depth measure — the ReentrantLock remains
the primary synchronization mechanism, but ConcurrentHashMap prevents
undefined behavior if threads do race on the maps.

ConcurrentHashMap does not allow null values. putObject(key, null) now
treats null as a removal to preserve backward compatibility. putString
already stores into a JsonObject (not the ConcurrentHashMap) so null
handling there is unchanged.

Also simplify getEffectiveKey() to use Map.getOrDefault — a single
atomic call replacing the containsKey-then-get pair. Fix two unit tests
that were passing uninitialized (null) fields to putObject — these were
test bugs where the field was never assigned.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>